# vaire

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ActivityBar.svelte  BookmarksPanel.svelte  BottomPanel.svelte  CommandPalette.svelte  CommitDialog.svelte  ContextMenu.svelte  DatabasePanel.svelte  DbConnectionDialog.svelte  DebugPanel.svelte  DiffDialog.svelte  DiffView.svelte  DockerPanel.svelte  EditorArea.svelte  GitLog.svelte  GitPanel.svelte  ImageViewer.svelte  KeyboardShortcuts.svelte  LocalHistoryDialog.svelte  MarkdownPreview.svelte  MonacoDiffEditor.svelte  MonacoEditor.svelte  PushDialog.svelte  QueryTab.svelte  RunConfigDialog.svelte  RunPanel.svelte  SettingsPanel.svelte  Sidebar.svelte  StatusBar.svelte  StructurePanel.svelte  Terminal.svelte  TitleBar.svelte  Toasts.svelte  TodoPanel.svelte  UpdateProjectDialog.svelte
src/lib/stores/: app.ts  bookmarks.ts  dbConnections.ts  debug.ts  dialogs.ts  diff.ts  keybindings.ts  notifications.ts  recent.ts  runConfigs.ts  theme.ts  workspace.ts  workspaceSettings.ts
src/lib/utils/: fileIcons.ts
src/routes/: +page.svelte
