[package]
name = "vaire"
version = "0.1.0"
description = "A fast, beautiful, multi-repo workspace with JetBrains DNA"
authors = ["Oguz Gul"]
edition = "2021"

[lib]
name = "vaire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
portable-pty = "0.8"
regex = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
mongodb = "3"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

